# lectorium

./: .gitignore  ARCHITECTURE.md  COPILOT_PROMPT.md  DEVELOPMENT.md  LICENSE  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
backend/app/: cli.py  database.py  main.py
backend/app/api/: auth.py  books.py  deps.py  upload.py
backend/app/models/: book.py  db_models.py
backend/app/services/: auth.py  epub_parser.py  library.py  progress.py  storage.py
backend/app/static/: app.js  style.css
backend/app/templates/: index.html
deploy/: Dockerfile  lectorium.service  nginx.conf
tests/: test_health.py  test_library.py
