[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lectorium"
version = "0.1.1"
description = "A self-hosted EPUB reader with audio narration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Sebastian Schwiebert" }
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "ebooklib>=0.18",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0"
]

[project.scripts]
lectorium = "backend.app.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "httpx>=0.27"
]

future = [
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "bleach>=6.1"
]

all = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "httpx>=0.27",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "bleach>=6.1"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
